// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor Anchor baseVue demo works fine 1`] = `
<div
  class="anchor-demo"
  id="#default"
  style="display: flex;"
>
  <div
    style="flex: 1;"
  />
  <div>
    <div>
      
      <div
        class="t-anchor t-size-m"
      >
        <div
          class="t-anchor__line"
        >
          <div
            class="t-anchor__line-cursor-wrapper"
          >
            <div
              class="t-anchor__line-cursor"
            />
          </div>
        </div>
        
        <div
          class="t-anchor__item"
        >
          <a
            class="t-anchor__item-link"
            href="#基础锚点"
            target="_self"
            title="基础锚点"
          >
            基础锚点
          </a>
          <!---->
        </div>
        <div
          class="t-anchor__item"
        >
          <a
            class="t-anchor__item-link"
            href="#多级锚点"
            target="_self"
            title="多级锚点"
          >
            多级锚点
          </a>
          <!---->
        </div>
        <div
          class="t-anchor__item"
        >
          <a
            class="t-anchor__item-link"
            href="#指定容器锚点"
            target="_self"
            title="指定容器锚点"
          >
            指定容器锚点
          </a>
          <!---->
        </div>
        <div
          class="t-anchor__item"
        >
          <a
            class="t-anchor__item-link"
            href="#特定交互锚点"
            target="_self"
            title="特定交互锚点"
          >
            特定交互锚点
          </a>
          <!---->
        </div>
        <div
          class="t-anchor__item"
        >
          <a
            class="t-anchor__item-link"
            href="#不同尺寸的锚点"
            target="_self"
            title="不同尺寸的锚点"
          >
            不同尺寸的锚点
          </a>
          <!---->
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Anchor Anchor containerVue demo works fine 1`] = `
<div
  class="anchor-demo anchor-container-demo"
  id="#container"
>
  <div
    class="t-anchor t-size-m"
    id="#default"
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##content-1"
        target="_self"
        title="content-1"
      >
        content-1
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##content-2"
        target="_self"
        title="content-2"
      >
        content-2
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##content-3"
        target="_self"
        title="content-3"
      >
        content-3
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##content-4"
        target="_self"
        title="content-4"
      >
        content-4
      </a>
      <!---->
    </div>
    
  </div>
  <div
    id="anchor-container"
  >
    <div
      class="anchor-content-1"
      id="#content-1"
    >
      anchor-content-1
    </div>
    <div
      class="anchor-content-2"
      id="#content-2"
    >
      anchor-content-2
    </div>
    <div
      class="anchor-content-3"
      id="#content-3"
    >
      anchor-content-3
    </div>
    <div
      class="anchor-content-4"
      id="#content-4"
    >
      anchor-content-4
    </div>
    <div
      class="anchor-content-5"
      id="#content-5"
    >
      anchor-content-5
    </div>
  </div>
</div>
`;

exports[`Anchor Anchor cursorVue demo works fine 1`] = `
<div
  class="anchor-demo"
>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        
        <div
          class="test-cursor"
        />
        
      </div>
    </div>
    
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##default"
        target="_self"
        title="定义"
      >
        定义
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##multiple"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##small"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##large"
        target="_self"
        title="创建签名"
      >
        创建签名
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##container"
        target="_self"
        title="创建内容"
      >
        创建内容
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Anchor Anchor largeVue demo works fine 1`] = `
<div
  class="anchor-demo"
  id="#large"
>
  <div
    class="t-anchor t-size-l"
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##default"
        target="_self"
        title="定义"
      >
        定义
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##multiple"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##small"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##large"
        target="_self"
        title="创建签名"
      >
        创建签名
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##container"
        target="_self"
        title="创建内容"
      >
        创建内容
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Anchor Anchor multipleVue demo works fine 1`] = `
<div
  class="anchor-demo"
  id="#multiple"
>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##default"
        target="_self"
        title="定义"
      >
        定义
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##multiple"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##small"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
      
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="##large"
          target="_self"
          title="创建签名"
        >
          创建签名
        </a>
        <!---->
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="##container"
          target="_self"
          title="创建内容"
        >
          创建内容
        </a>
        <!---->
      </div>
      
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Anchor Anchor smallVue demo works fine 1`] = `
<div
  class="anchor-demo"
  id="#small"
>
  <div
    class="t-anchor t-size-s"
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##default"
        target="_self"
        title="定义"
      >
        定义
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##multiple"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##small"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##large"
        target="_self"
        title="创建签名"
      >
        创建签名
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##container"
        target="_self"
        title="创建内容"
      >
        创建内容
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Anchor Anchor targetVue demo works fine 1`] = `
<div
  class="anchor-demo"
  id="#anchor-target"
>
  <div
    class="t-anchor__target"
    id="#anchor-target-1"
  >
    
     定义 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-2"
  >
    
     服务功能 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-3"
  >
    
     使用指南 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-4"
  >
    
     创建签名 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-5"
  >
    
     创建内容 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-6"
  >
    
     保密协议 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-7"
  >
    
     其他 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
</div>
`;
